--- a/profitalyze.ipynb
+++ b/profitalyze.ipynb
@@ -29,7 +29,7 @@
     "change_ROA = 0\n",
     "acc = 0\n",
     "\n",
-    "data_summary = pd.DataFrame(columns=['Ticker','Profitalyze', 'ROA', 'Change in ROA', 'Operating Cash Flow', 'Accruals'])"
+    "data_summary = pd.DataFrame(columns=['Ticker','Profitability', 'ROA', 'Change in ROA', 'Operating Cash Flow', 'Accruals'])"
    ]
   },
   {
@@ -109,7 +109,7 @@
     "    get_data(ticker)\n",
     "    profitalyze()\n",
     "    new_row = {'Ticker': ticker,\n",
-    "                'Profitalyze': profitalyze_score,\n",
+    "                'Profitability': profitalyze_score,\n",
     "                'ROA': ROA,\n",
     "                'Change in ROA': change_ROA,\n",
     "                'Operating Cash Flow': CF,\n",
